[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "patient-safety-ai-mcp"
version = "1.0.0"
description = "AI-powered patient safety ai MCP server for agents. Supports check drug interactions, assess patient risk, validate dosage. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "patient", "safety"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/patient-safety-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
patient_safety_ai_mcp = "server:main"
